# nd-sim-tools

./: .gitignore  clean_output_pnfs.sh  cleanup.sh  get_file_numbers.sh  merge_fd_caf.py  plot_ndfd_merged.C  produce_edep-paramreco_muoncontained.sh  produce_edep_multimuon.sh  produce_edep_muonmacro.sh  produce_edep_muonshowers.sh  produce_edep_singlemuon.sh  setup_merge_py.sh
ND_CAFMaker/: CAF.C  makeCAF  makeCAF.cxx  ndcaf_setup.sh
inputs/DUNE_ND_GeoEff/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  setup.sh
inputs/DUNE_ND_GeoEff/app/: CMakeLists.txt  Edepsim_ana.py  FDEffCalc.C  FDVtxPlot.cpp  FDVtxPlot_z_fixed.cpp  Helpers.h  Makefile  MergeFiles.cpp  Plot_E_vistrue.cpp  ReadEffNtuple.cpp  ReadHadronHitNtuple.cpp  UserConfig.py  cmake_install.cmake  makeEDepSimProject.C  muonEff30.nn  muonEffModel.py  runGeoEffEDepSimBeamDir.cpp  runGeoEffFDEvtSim.cpp  runGeoEffFDEvtSim_hadronplot.cpp
inputs/DUNE_ND_GeoEff/include/: geoEff.h
inputs/DUNE_ND_GeoEff/pybind11/: Makefile  cmake_install.cmake
inputs/DUNE_ND_GeoEff/src/: CMakeLists.txt  Makefile  cmake_install.cmake  geoEff.cpp  pyGeoEff.cpp
inputs/ND_CAFMaker/: CAF.C  CAF.h  Makefile  makeCAF  makeCAF.cxx  makeCAFInfillInfo  makeCAFInfillInfoNuSyst  makeCAFInfillInfoNuSyst.cxx  makeCAFInfillTruth  makeCAFInfillTruth.cxx  makeCAF_resim-muon  makeCAF_resim-muon.cxx  ndcaf_setup.sh
inputs/sim_inputs/: dumpTree_nogeoeff.py  dump_edep_to_flattree.py
inputs/sim_inputs_larbath_selected_ndfd_pairs/: GNuMIFlux.xml  UserConfig_10000throws.py  UserConfig_4000throws.py  UserConfig_tdr_nofdthrows.py  activate_all_lar_geometry_nd.sh  dune-nd_nd.mac  fhicl.fcl  (+5 more)
produce_scripts/: produce_edep-paramreco_larbath.sh  produce_edep-paramreco_larbath_transrots.sh  produce_edep-paramreco_larbath_transrots_infillinfo.sh  produce_edep-paramreco_larbath_transrots_infillinfo_nusyst.sh  produce_edep-paramreco_larbath_transrots_tdr.sh  produce_edep_larbath_transrots.sh  produce_edep_muonmacro.sh  run_genie.sh
sim_inputs/: MPD_SPY_LAr.volArgonCubeActive.maxpl.xml  copy_dune_flux  copy_dune_ndtf_flux  dump_edep_to_flattree.py  dune-nd.mac  dune-nd_smallsteps.mac
sim_inputs_singleparticle/: dumpTree_larndsimv0_3_4.py  dumpTree_larndsimv0_3_4_multiprimaryvtx.py  multi_muon_shower.mac  muon.mac  single_muon.mac
sim_inputs_transrots/: LArBath_ndtopvol.gdml  Messenger_production.xml  dumpTree_larndsimv0_3_4_fromedeptransrots.py  dumpTree_larndsimv0_3_4_fromedeptransrots_incfddeps.py
(+6 files in other folders)
